fix: flow navigation alignments (#790)

--- a/packages/components/src/flowNavigation/FlowNavigation.less
+++ b/packages/components/src/flowNavigation/FlowNavigation.less
@@ -12,18 +12,33 @@
     width: 100%;
     min-width: 320px;
     max-width: 1164px;
-    @media (--screen-sm) {
-      .p-b-2;
-    }
   }
 
   &__stepper {
     .p-b-0;
     .p-x-0;
-    @media (--screen-sm) {
-      .p-x-5;
+  }
+
+  &--xs-max {
+    .np-flow-navigation__stepper {
+      .tw-stepper-steps {
+        display: none;
+      }
+      .progress {
+        .m-b-0;
+      }
     }
-    @media (--screen-lg) {
+  }
+
+  &--sm {
+    .np-flow-navigation__stepper {
+      .p-x-3;
+      min-height: 56px;
+    }
+  }
+
+  &--lg {
+    .np-flow-navigation__stepper {
       max-width: 562px;
     }
   }
@@ -32,6 +47,7 @@
     .m-x-2;
     height: var(--size-32);
     width: 1px;
+    min-width: 1px;
     background-color: var(--color-border-neutral);
   }
 
@@ -61,7 +77,8 @@
       transform: rotate(0deg);
     }
   }
-  @media (--screen-xs-max) {
+
+  &--xs-max {
     .np-animated-label {
       height: auto;
     }
